@@ -1,5 +1,6 @@
 = ActiveMerchant CHANGELOG
 
+* Remove @response instance variable and don't use billing address for shipping address in LinkpointGateway [cody]
 * Remove @response instance variable from ExactGateway [cody]
 * Remove @response instance variable from EwayGateway [cody]
 * Remove @response instance variable from EfsnetGateway [cody]
